LMS-65: Add button "To lesson"

--- a/App_Web/src/main/resources/templates/homework.html
+++ b/App_Web/src/main/resources/templates/homework.html
@@ -12,6 +12,7 @@
     <div class="left-side-area">
         <h1 class="header">Homework</h1>
         <h2 class="subheader">Homework Detail Info</h2>
+        <a th:href="'/lessons/homework/' + ${homework.id}" class="button-active">To lessons</a>
     </div>
 
     <div>
