LMS-69: Add reset Password to UserUpdate MANAGER

--- a/App_Web/src/main/resources/templates/update_password.html
+++ b/App_Web/src/main/resources/templates/update_password.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <title>Change Password</title>
     <meta charset="UTF-8">
@@ -15,12 +16,25 @@
         <h2 class="subheader">Set up a new password for your account</h2>
     </div>
     <div class="main-area">
-        <form th:action="'/auth/updatePassword/' + ${userId}" method="POST">
+        <form th:action="'/auth/updatePassword/' + ${userId}" method="POST"  sec:authorize="hasAnyAuthority('STUDENT')">
             <table>
                 <tr>
                     <td class="text">Old password</td>
                     <td><input type="password" placeholder="Enter old password" name="oldPassword" required></td>
                 </tr>
+                <tr>
+                    <td class="text">New password</td>
+                    <td><input id="input-password" type="password" placeholder="Enter new password" name="newPassword" required></td>
+                </tr>
+                <tr>
+                    <td class="text">Confirm password</td>
+                    <td><input id="input-confirm-password" type="password" placeholder="Confirm password" name="confirmPassword" required></td>
+                </tr>
+            </table>
+            <input id="input-submit" type="submit" value="Change"/>
+        </form>
+        <form th:action="'/auth/updatePasswordManager/' + ${userId}" method="POST" sec:authorize="hasAnyAuthority('MANAGER')">
+            <table>
                 <tr>
                     <td class="text">New password</td>
                     <td><input id="input-password" type="password" placeholder="Enter new password" name="newPassword" required></td>
