--- a/App_Web/src/main/resources/templates/course/courses.html
+++ b/App_Web/src/main/resources/templates/course/courses.html
@@ -16,6 +16,8 @@
         <h2 class="subheader" th:text="#{Courses.ListOfCourses}">List <br> of all courses</h2>
         <a sec:authorize="hasAnyAuthority('MANAGER')" href="/courses/createForm" class="button-active"
            th:text="#{Courses.LeftSideArea.Create}">Create</a>
+        <a href="/lessons" sec:authorize="hasAnyAuthority('TRAINER', 'MANAGER')"
+           class="button-active">All lessons</a>
     </div>
     <div class="main-area">
         <table class="table" th:unless="${courses.empty}">
