--- a/App_Web/src/main/resources/templates/lesson/lesson.html
+++ b/App_Web/src/main/resources/templates/lesson/lesson.html
@@ -11,7 +11,10 @@
 <div class="main">
     <div class="left-side-area">
         <h1 class="header">Lesson</h1>
-        <h1 class="subheader">Information<br> about the lesson</h1>
+        <h1 class="subheader" th:unless="${course} == null or ${course.title.empty}"
+            th:text="'Information about the lesson ' + ${course.title}">Information about the lesson</h1>
+        <h1 class="subheader" th:if="${course} == null or ${course.title.empty}">Information about the lesson (Non
+            Course)</h1>
         <a sec:authorize="hasAnyAuthority('STUDENT')" th:href="@{/homeworks/create?lesson=__${lesson.id}__}"
            class="button-active">Create homework</a>
     </div>
@@ -27,13 +30,14 @@
             </tr>
             <tr>
                 <td class="text-left-column">Home task</td>
-                <td><input type="text" th:value=${lesson.homeTask}></td>
+                <td><input type="text" th:value=${lesson.homeTask} disabled></td>
             </tr>
         </table>
         <br>
-        <a th:href="'/courses/' + ${id}" class="button-active">Back</a>
         <a th:href="'/lessons/updateForm/' + ${lesson.id}" sec:authorize="hasAnyAuthority('TRAINER', 'MANAGER')"
            class="button-active">Edit</a>
+        <a href="/lessons" sec:authorize="hasAnyAuthority('TRAINER', 'MANAGER')"
+           class="button-active">All lessons</a>
     </div>
 </div>
 </body>
