LMS-77: Change name to Code convection

--- a/App_Web/src/main/resources/templates/create_homework.html
+++ b/App_Web/src/main/resources/templates/create_homework.html
@@ -53,7 +53,7 @@
                 <tr>
                     <td class="text">Add file</td>
                     <td><input type="hidden" name="fileLink.link">
-                        <input type="file" name="file_upload"/>
+                        <input type="file" name="fileUpload"/>
                     </td>
                 </tr>
             </table>
