--- a/App_Web/src/main/resources/templates/lesson/create_lesson.html
+++ b/App_Web/src/main/resources/templates/lesson/create_lesson.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link href="/css/main.css" rel="stylesheet">
     <link href="/css/fontawesome/icons.css" rel="stylesheet">
 </head>
 <body>
-<form method="post" action="/lessons/create">
-    <b>Form for create new lesson:</b><br>
-    <p><b>Enter new data</b><br>
-        <input type="text" name="title"> Title<br>
-        <input type="datetime-local" name="startTime"> Start time<br>
-        <input type="text" name="description"> Description<br>
-        <input type="text" name="content"> Content<br>
-        <input type="text" name="homeTask"> Home task<br>
-    <p><input type="submit" value="Submit">
-        <input type="reset" value="Reset">
-    </p>
-</form>
+<nav th:replace="~{plugins/menu::menu}"></nav>
+<div class="main">
+    <div class="left-side-area">
+        <h1 class="header">Create</h1>
+        <h2>Lesson</h2>
+    </div>
+    <div class="main-area">
+        <form method="post" action="/lessons/create">
+            <b>Form for create new lesson:</b><br>
+            <p><b>Enter new data</b><br>
+                <input type="text" name="title"> Title<br>
+                <input type="datetime-local" name="startTime"> Start time<br>
+                <input type="text" name="description"> Description<br>
+                <input type="text" name="content"> Content<br>
+                <input type="text" name="homeTask"> Home task<br>
+            <p><input type="submit" value="Create">
+                <input type="reset" value="Reset">
+            </p>
+        </form>
+    </div>
+</div>
 </body>
 </html>
