--- a/App_Web/src/main/resources/templates/course/update_course.html
+++ b/App_Web/src/main/resources/templates/course/update_course.html
@@ -11,7 +11,7 @@
     <div class="left-side-area">
         <h1 class="header">Edit Course</h1>
         <h2 class="subheader">Changing course information</h2>
-        <a sec:authorize="hasAuthority('MANAGER')" th:href="'/lessons/createForm'"
+        <a sec:authorize="hasAnyAuthority('MANAGER', 'TRAINER')" th:href="'/lessons/createForm'"
            class="button-active">Add lesson</a>
     </div>
     <div class="main-area">
