--- a/App_Web/src/main/resources/templates/homework.html
+++ b/App_Web/src/main/resources/templates/homework.html
@@ -12,7 +12,9 @@
     <div class="left-side-area">
         <h1 class="header">Homework</h1>
         <h2 class="subheader">Homework Detail Info</h2>
-        <a th:href="'/lessons/homework/' + ${homework.id}" class="button-active">To lessons</a>
+        <a th:href="'/lessons/homework/' + ${homework.id}" class="button-active">To lesson</a>
+        <a th:href="'/homeworks/student/' + ${homework.student.id}" class="button-active">To homeworks</a>
+        <a th:href="@{/homeworks/update/__*{id}__}" class="button-active">Edit</a>
     </div>
 
     <div>
@@ -28,9 +30,12 @@
             </tr>
             <tr>
                 <td class="text-left-column">Filelink (temp info)</td>
-                <td>
+                <td th:unless="${homework.fileLink} == null">
                     <input type="text" th:value=${homework.fileLink.link} disabled>
                     <a th:href="@{/file/__${file_name}__}" class="button-active" download>Download file</a>
+                </td>
+                <td th:if="${homework.fileLink} == null">
+                    <input type="text" disabled>
                 </td>
             </tr>
             <tr>
@@ -38,7 +43,6 @@
                 <td><input type="text" th:value=${homework.mark} disabled></td>
             </tr>
         </table>
-        <a th:href="'/homeworks/student/' + ${homework.student.id}" class="button-active">To homeworks</a>
         <a th:href="'/homeworks/update/' + ${homework.id}"
            sec:authorize="hasAnyAuthority('TRAINER', 'STUDENT', 'MANAGER')"
            class="button-active">Edit</a>
