LMS-54: Change description - input type - text area, price input type - number

--- a/App_Web/src/main/resources/templates/course/course.html
+++ b/App_Web/src/main/resources/templates/course/course.html
@@ -16,6 +16,7 @@
         <h2 class="subheader">Information about the course</h2>
         <a sec:authorize="hasAuthority('MANAGER')" th:href="'/courses/updateForm/' + ${course.id}"
            class="button-active">Edit course</a>
+        <a href="/courses" class="button-active">To courses</a>
         <h2 class="text" sec:authorize="hasAuthority('STUDENT')">Enroll in a course</h2>
         <form action="/requests/create" method="post" sec:authorize="hasAuthority('STUDENT')">
             <input type="hidden" name="user.email" th:value="${#authentication.name}">
@@ -32,6 +33,10 @@
             <tr>
                 <td class="text-left-column">Start</td>
                 <td><input type="text" th:value=${course.startDate} disabled></td>
+            </tr>
+            <tr>
+                <td class="text" align="right">Description</td>
+                <td><textarea type="text" th:text=${course.description} name="description" class="scrolling" disabled></textarea></td>
             </tr>
             <tr>
                 <td class="text-left-column">Price</td>
