LMS-54: Correct Creqte & Reset bottons

--- a/App_Web/src/main/resources/templates/lesson/create_lesson.html
+++ b/App_Web/src/main/resources/templates/lesson/create_lesson.html
@@ -46,9 +46,9 @@
                         </select>
                     </td>
                 </tr>
-                <input type="submit" value="Create">
-                <input type="reset" value="Reset">
             </table>
+            <button type="reset" class="button-active">Reset</button>
+            <button type="submit" class="button-active">Save changes</button>
         </form>
     </div>
 </div>
